cogl (1.16.0-2) UNRELEASED; urgency=low

  * debian/control.in:
    + Restrict libwayland-dev build dependency to linux.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 14 Oct 2013 17:04:54 +0200

cogl (1.16.0-1) experimental; urgency=low

  * New upstream release.
  * Build-depend on libwayland-dev (>= 1.1.90) according to configure.ac
  * Rename packages for bumped sonames (12->15)
  * Update symbols files
  * Bump Standards-Version to 3.9.4
  * also install /usr/include/cogl/cogl-path in libcogl-dev
  * Bump libcogl15 breaks libclutter-1.0-0 to (<< 1.15)

 -- Andreas Henriksson <andreas@fatal.se>  Sat, 12 Oct 2013 19:58:17 +0200

cogl (1.14.0-3) unstable; urgency=low

  * Add "Breaks: libclutter-1.0-0 (<< 1.14)" in libcogl12 to prevent
    non-working partial upgrades. (Closes: #720371)

 -- Andreas Henriksson <andreas@fatal.se>  Wed, 21 Aug 2013 23:41:51 +0200

cogl (1.14.0-2) unstable; urgency=low

  [ Jeremy Bicha ]
  * use canonical Vcs-* fields

  [ Andreas Henriksson ]
  * Upload to unstable.

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 16 Aug 2013 18:27:29 +0200

cogl (1.14.0-1) experimental; urgency=low

  * New upstream release.
    + debian/patches/Disable-reliance-on-KHR_create_context.patch:
      - Removed, fixed upstream in a different way.
  * debian/control.in,
    debian/rules,
    debian/libcogl12.*,
    debian/libcogl-gles2-12.*,
    debian/libcogl*-dev.install:
    + Split libcogl-gles2 into its own package.
  * debian/rules:
    + Only enable egl/gles2 on linux and kfreebsd.
  * debian/libcogl12.symbols:
    + Mark cogl_egl_context_get_egl_display as not available on hurd.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 25 Mar 2013 18:33:43 +0100

cogl (1.13.4-1) experimental; urgency=low

  [ Jeremy Bicha ]
  * New upstream release
    - soname bump
  * debian/control.in:
    - Bump minimum glib to 2.32
    - Drop obsolete breaks/replaces
    - Bump libclutter-1.0-dev breaks for soname transition

  [ Rico Tzschichholz ]