@@ -2,6 +2,8 @@ cogl (1.16.0-2) UNRELEASED; urgency=low
 
   * debian/control.in:
     + Restrict libwayland-dev build dependency to linux.
+  * debian/rules:
+    + Actually enable wayland support.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 14 Oct 2013 17:04:54 +0200
 
